Update progress_log. Fix freezing issue!

--- a/src/main/resources/DarkMode.css
+++ b/src/main/resources/DarkMode.css
@@ -53,3 +53,6 @@ GridPane {
     -fx-border-color: #999999 transparent transparent transparent;
     -fx-font-size: 14px;
 }
+menuBar {
+    -fx-border-color: transparent transparent #999999 transparent;
+}
