Fix DarkMode, Add option to select decimal accuracy in range 1-16.

--- a/src/main/resources/DefaultStyle.css
+++ b/src/main/resources/DefaultStyle.css
@@ -17,7 +17,9 @@
 .chart {
     -fx-padding: 10px;
 }
-GridPane {
-    -fx-border-color: #161616 transparent transparent transparent;
+HBox {
     -fx-font-size: 14px;
+}
+VBox {
+    -fx-border-color: #161616 transparent transparent transparent;
 }
