--- a/src/main/resources/DarkMode.css
+++ b/src/main/resources/DarkMode.css
@@ -47,10 +47,12 @@
 .chart-title {
     -fx-text-fill: #2069E0;
 }
-/* Then the gridpane at the bottom */
-GridPane {
+/* Then the VBox at the bottom */
+VBox {
     -fx-background-color: #161616;
     -fx-border-color: #999999 transparent transparent transparent;
+}
+HBox {
     -fx-font-size: 14px;
 }
 menuBar {
